html assignment changes
Created assignment, dog, dog video pages. Linked puppy photo and puppy playing video.

--- a/dog_video.html
+++ b/dog_video.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-<title> Puppy </title>
-<h1> Puppy's Coding Adventure </h1>
-<h3> Puppies are the best </h3>
+<title> Kevin's Title </title>
+<h1> Kevin's Coding Adventure </h1>
+<h3> Where the Journey Begins </h3>
 <nav>
 	<a href="assignment.html">Home</a>
 	<a href="dog.html">Dog Picture </a>
@@ -10,10 +10,9 @@
 </nav>
 </head>
 <main>
-<h6> Yay for puppies...</h6>
-<img src="images/dog.jpg">
-<a href="assignment.html>home</a>
+<body>
+<a href="https://youtu.be/pxn0wL_uSm4?si=I7y2964TjBUkUCbh">A cute puppy video</a>
+</body>
 </main>
 <footer> Copyright doo doo </footer>
-
 </html>
