--- a/assignment.html
+++ b/assignment.html
@@ -11,6 +11,7 @@
 </head>
 <main>
 <body>
+<blockquote>Puppies.. Cats.. the Metaphore for our contrasting daily needs</blockquote>
 <h6> It was a cold and blistery evening when...</h6>
 <img src="images/kevintrannguyen.jpg">
 <h6><a href="https://images.ctfassets.net/sfnkq8lmu5d7/1NaIFGyBn0qwXYlNaCJSEl/ad59ce5eefa3c2322b696778185cc749/2021_0825_Kitten_Health.jpg?w=1000&h=750&fl=progressive&q=70&fm=jpg">Kittens are as cute as puppies.</a>
