--- a/dog_video.html
+++ b/dog_video.html
@@ -10,8 +10,10 @@
 </nav>
 </head>
 <main>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YHOYDjJ1ta4?si=VNGEfr2-1uVuNCOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <body>
-<a href="https://youtu.be/pxn0wL_uSm4?si=I7y2964TjBUkUCbh">A cute puppy video</a>
+<p><a href="https://youtu.be/pxn0wL_uSm4?si=I7y2964TjBUkUCbh">A cute puppy video</a></p>
+
 </body>
 </main>
 <footer> Copyright doo doo </footer>
