--- a/assignment.html
+++ b/assignment.html
@@ -6,7 +6,7 @@
 <nav>
 	<a href="assignment.html">Home</a>
 	<a href="dog.html">Dog Picture </a>
-	<a href="dog_video.html">Dog Video</a>
+	<a href="dog_video.html">Dog Vid</a>
 </nav>
 </head>
 <main>
